<resources>
    <string name="app_name">banguncalc</string>
    <string name="persegi">Persegi</string>
    <string name="segitiga">Segitiga</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="kubus">Kubus</string>
    <string name="panjangsisi">Panjang Sisi</string>
    <string name="lebar">Lebar</string>
    <string name="panjang">Panjang</string>
    <string name="radius">r</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
</resources>
