<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButton"
                android:onClick="persegi"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:src="@drawable/persegi" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/persegi"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:onClick="segitiga"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:src="@drawable/segitiga" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/segitiga"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:onClick="lingkaran"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:src="@drawable/lingkaran" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/lingkaran"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:onClick="kubus"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:src="@drawable/kubus" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/kubus"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>